<resources>
    <string name="app_name">玩安卓</string>
    <string name="menu_collect">收藏</string>
    <string name="menu_setting">设置</string>
    <string name="menu_about">关于</string>
    <string name="menu_logout">退出</string>
    <string name="title_home">首页</string>
    <string name="title_project">项目</string>
    <string name="title_tree">体系</string>
    <string name="title_nav">导航</string>
    <string name="title_chapter">公众号</string>
</resources>