<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/app_name">
        <menu>
            <item
                android:id="@+id/nav_menu_collect"
                android:icon="@drawable/collection"
                android:title="@string/menu_collect"/>

            <item
                    android:id="@+id/nav_setting"
                    android:icon="@drawable/setting"
                    android:title="@string/menu_setting"/>

            <item
                    android:id="@+id/nav_menu_about"
                    android:icon="@drawable/flag"
                    android:title="@string/menu_about"/>


            <item
                android:id="@+id/nav_menu_logout"
                android:icon="@drawable/logout"
                android:title="@string/menu_logout"/>
        </menu>
    </item>
</menu>